--- a/workflows/test.yml
+++ b/workflows/test.yml
@@ -1,22 +1,32 @@
 name: Run Tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
+    # Step 1: Checkout the repository
     - name: Checkout code
       uses: actions/checkout@v2
 
+    # Step 2: Set up Python environment
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.9'
 
+    # Step 3: Install backend dependencies
     - name: Install dependencies
       run: pip install -r backend/requirements.txt
 
+    # Step 4: Run the tests using pytest
     - name: Run tests
-      run: pytest backend/tests
+      run: pytest backend/tests --maxfail=1 --disable-warnings -q
